# reg-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
brev/: README.md
data/credit/: sample_credit.csv
data/models/: model_card_aml_monitoring.md  model_card_complaint_reg24.md  model_card_credit.md  model_card_fraud.md  model_card_genai_complaint.md  model_card_pd_scorecard.md  model_card_ppnr_forecast.md
data/regulations/: ccar_dfast_stress_testing.md  ecoa_reg_b.md  fair_lending_exam.md  fcra.md  ffiec_bsa_aml.md  glba_safeguards.md  model_validation_standards.md  nist_ai_rmf.md  occ_2011-12_model_risk.md  reg_e_efta.md  sr11-7_model_risk.md  udaap_bsa_aml.md
docs/: ARCHITECTURE.md  STUDY_GUIDE.md  sample_report.md
k8s/: 00-namespace.yaml  01-config.yaml  10-nvidia-nim.yaml  10-triton.yaml  20-mcp-servers.yaml  30-agents.yaml  40-ui-ingress.yaml  README.md
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
reg_agents/: __init__.py  config.py
reg_agents/ui/: app.py
scripts/: brev_up.sh  demo_run.py  export_triton_model.py  fetch_cfpb_complaints.py  generate_complaint_data_profile.py  generate_complaint_model_docs.py  generate_credit.py  generate_lifecycle.py  generate_model_development_doc.py  generate_report.py  generate_transactions.py  lifecycle_run.py  run_local.sh  score_batch.py  stop_local.sh
tests/: test_a2a.py  test_complaints.py  test_corpus.py  test_fraud_scoring.py  test_modeling.py
triton/: README.md
(+65 files in other folders)
