[project]
name = "reg-agents"
version = "0.1.0"
description = "Regulatory Intelligence & Model Governance multi-agent system on the NVIDIA AI stack (NIM, NeMo Retriever, Triton) with MCP tool servers and A2A agent orchestration."
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
